--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Introduction\n",
     "\n",
-    "Bona Fide is expanding its horizons to venture into a new business which involves purchasing and operating airplanes for commercial and private enterprises. Therefore the company has no idea of the risks involved in aicraft operation and need research done to provide them with meaningful insights that will help in making the right decisions to purchase the lowest risk aircraft to start up the business. Ths will involve analysis of complex data to uncover patterns and develop insights. Data cleaning and visualization will be applied to come up with predictive models, and communicate the ultimate findings to the business stakeholders.\n"
+    "Bona Fide is expanding its horizons by venturing into a new business which involves purchasing and operating airplanes for commercial and private enterprises. Therefore the company has no idea of the risks involved in aicraft operation and need research done to provide them with meaningful insights that will help in making the right decisions to purchase the lowest risk aircraft to start up the business. Ths will involve analysis of complex data to uncover patterns and develop insights. Data cleaning and visualization will be applied to come up with predictive models, and communicate the ultimate findings to the business stakeholders.\n"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 222,
    "id": "3010fddd",
    "metadata": {},
    "outputs": [],
@@ -52,13 +52,12 @@
    "metadata": {},
    "source": [
     "2:Loading the Dataset which is a CSV file titled 'Aviation Accident from 1919-2023'. \n",
-    "\n",
-    "Here Pandas will read the files and provide information on the dataset for a better understanding of the data to help in manipulation and data cleaning processes."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 223,
    "id": "7a0c0cc8",
    "metadata": {},
    "outputs": [
@@ -275,7 +274,7 @@
        "[23967 rows x 9 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 224,
    "id": "8d8bd52f",
    "metadata": {},
    "outputs": [
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 225,
    "id": "d252dbba",
    "metadata": {},
    "outputs": [
@@ -332,7 +331,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 226,
    "id": "2ee21574",
    "metadata": {},
    "outputs": [
@@ -363,7 +362,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 227,
    "id": "27bd8084",
    "metadata": {},
    "outputs": [],
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 228,
    "id": "58cbe474",
    "metadata": {},
    "outputs": [
@@ -395,7 +394,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 229,
    "id": "dbf875a2",
    "metadata": {},
    "outputs": [
@@ -433,7 +432,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 230,
    "id": "ab20e8e9",
    "metadata": {},
    "outputs": [],
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 231,
    "id": "3a5a86cd",
    "metadata": {},
    "outputs": [],
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 232,
    "id": "11e9ca74",
    "metadata": {},
    "outputs": [],
@@ -474,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 233,
    "id": "b53f6878",
    "metadata": {},
    "outputs": [],
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 234,
    "id": "6d859f25",
    "metadata": {},
    "outputs": [
@@ -503,7 +502,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,12 +524,12 @@
    "id": "2268da61",
    "metadata": {},
    "source": [
-    "All the data types are 'object' hence it is necessary to convert some columns into different data types in order to have several options when finally working on the visualizations"
+    "All the data types are 'object' hence some columns will be converted into different data types in order to have several options when working on the visualizations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 235,
    "id": "99390bac",
    "metadata": {},
    "outputs": [],
@@ -542,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 236,
    "id": "d4d9ec9b",
    "metadata": {},
    "outputs": [],
@@ -555,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 237,
    "id": "dd707116",
    "metadata": {},
    "outputs": [],
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 238,
    "id": "eb0632cd",
    "metadata": {},
    "outputs": [
@@ -593,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 239,
    "id": "76e4e2a2",
    "metadata": {},
    "outputs": [
@@ -612,7 +611,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 240,
    "id": "99a69956",
    "metadata": {},
    "outputs": [],
@@ -633,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 241,
    "id": "9dc17590",
    "metadata": {},
    "outputs": [
@@ -652,7 +651,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 242,
    "id": "da99443c",
    "metadata": {},
    "outputs": [
@@ -701,16 +700,63 @@
    "source": [
     "6:Creating Data Visualizations\n",
     "\n",
-    "Done with the data cleaning process and now we have data that can be used to create accurate visualizations. We'll\n",
+    "After data cleaning, we have data to use for creation of visualizations. We'll\n",
     "work with data from 1963 to 2023 for the visualizations for more clarity and simplicity in the output of the graphs. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "id": "1c409c43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            date                           type registration  \\\n",
+      "9472   01-Jan-63  Fairchild C-119 Flying Boxcar      Unknown   \n",
+      "9473   07-Jan-63          Lockheed P-2H Neptune       140966   \n",
+      "9474   10-Jan-63          Lockheed P-2H Neptune       135559   \n",
+      "9475   11-Jan-63                  Curtiss C-46E       CF-HTI   \n",
+      "9476   11-Jan-63  Lockheed L-749A Constellation       F-BAZM   \n",
+      "...          ...                            ...          ...   \n",
+      "23962  11-May-23                   Hawker 900XP       PK-LRU   \n",
+      "23963  11-May-23      Cessna 208B Grand Caravan       PK-NGA   \n",
+      "23964  12-May-23      Cessna 208B Grand Caravan       5X-RBR   \n",
+      "23965  14-May-23                Boeing 747-4R7F       LX-OCV   \n",
+      "23966  15-May-23                    Learjet 35A       D-CGFQ   \n",
+      "\n",
+      "                       operator  fatalities                  location  \\\n",
+      "9472                  Indian AF         2.0                  Banhilal   \n",
+      "9473                    US Navy         0.0  near Alameda NAS, CA ...   \n",
+      "9474                    US Navy         7.0       Kodiak NAS, AK (...   \n",
+      "9475   Maritime Central Airways         0.0       Moncton-Metropol...   \n",
+      "9476                       SGAC        12.0            near PÃ©rillos   \n",
+      "...                         ...         ...                       ...   \n",
+      "23962    Angkasa Super Services         0.0       Maleo Airport (MOH)   \n",
+      "23963    Nasional Global Aviasi         0.0         Fentheik Airstrip   \n",
+      "23964              Bar Aviation         0.0       Kampala-Kajjansi...   \n",
+      "23965                  Cargolux         0.0       Luxembourg-Finde...   \n",
+      "23966                       GFD         2.0             Hohn Air Base   \n",
+      "\n",
+      "          country cat  year  \n",
+      "9472        India  A1  1963  \n",
+      "9473          USA  A1  1963  \n",
+      "9474          USA  A1  1963  \n",
+      "9475       Canada  O1  1963  \n",
+      "9476       France  A1  1963  \n",
+      "...           ...  ..   ...  \n",
+      "23962   Indonesia  A2  2023  \n",
+      "23963   Indonesia  A2  2023  \n",
+      "23964      Uganda  A1  2023  \n",
+      "23965  Luxembourg  A2  2023  \n",
+      "23966     Germany  A1  2023  \n",
+      "\n",
+      "[14241 rows x 9 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "df_filtered = df[(df['year'] >= 1963) & (df['year'] <= 2023)]\n",
@@ -719,17 +765,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "966981a3",
-   "metadata": {},
-   "source": [
-    "Import Matplotlib and Seaborn which are the necessary libraries to start working on the visualizations.\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "680bcacb",
+   "execution_count": 244,
+   "id": "2cf8fac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 245,
    "id": "5ab29d75",
    "metadata": {},
    "outputs": [],
@@ -758,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 246,
    "id": "58e6afb2",
    "metadata": {},
    "outputs": [
@@ -793,12 +831,12 @@
    "id": "b506dca6",
    "metadata": {},
    "source": [
-    "A bar chart of accidents encountered within five year intervals form 1963-2023"
+    "A bar chart of accidents encountered within five year intervals from 1963-2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 247,
    "id": "a15215ed",
    "metadata": {},
    "outputs": [
@@ -835,12 +873,12 @@
    "id": "c4e151db",
    "metadata": {},
    "source": [
-    "A Horizontal Bar Chart of the aicraft types most involved in the accidents"
+    "A Horizontal Bar Chart of the top 10 aicraft types most involved in the accidents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 248,
    "id": "31ec8b1a",
    "metadata": {},
    "outputs": [
@@ -878,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 249,
    "id": "6a3337f5",
    "metadata": {},
    "outputs": [
@@ -911,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 250,
    "id": "fe3020e5",
    "metadata": {},
    "outputs": [
@@ -942,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 251,
    "id": "27dc9c5c",
    "metadata": {},
    "outputs": [],
@@ -952,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 252,
    "id": "9b9049c3",
    "metadata": {},
    "outputs": [],
